@@ -1,6 +1,7 @@
 libstream-perl (0.9.6) UNRELEASED; urgency=low
 
   * Stream::In::Role::ShiftAsScalar and Stream::In::Role::ShiftAsList roles
+  * Stream::Role::Clone
 
  -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Fri, 26 Nov 2010 18:53:29 +0300
 
